--- a/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
@@ -31,6 +31,10 @@ Keeping them in one contract made design choices harder to reason about.
 3. Prompt pack ref is prepended to step `message_refs` during materialization.
 4. Workspace prompt JSON is validated before snapshot stage/apply.
 
+Current implementation note:
+
+1. `aos.agent/core_workspace_sync@1` currently resolves both prompt and tool workspace assets in one plan.
+
 ## Problem
 
 Today prompt loading is effectively workspace-centric. That is good for shared app content, but too heavy for:
@@ -49,6 +53,24 @@ We need a no-workspace prompt path that still stays deterministic and typed.
 2. Workspace support remains optional in SDK usage.
 3. Prompt materialization always outputs `message_refs` for `sys/llm.generate`.
 4. Run immutability still applies: chosen prompt source is frozen per run.
+5. SDK should export prompt sync as a standalone composable-core plan.
+6. Direct prompt refs path should not require any sync plan.
+
+## SDK Plan Exports (Prompts)
+
+Target reusable plans in `crates/aos-agent-sdk/air/plans/`:
+
+1. `aos.agent/core_prompt_sync_from_workspace@1`
+   - input: prompt-specific workspace sync request contract,
+   - output: prompt snapshot-ready or unchanged result contract.
+2. optional `aos.agent/core_workspace_sync@2`
+   - orchestration-only plan that composes prompt/tool sync subplans via `spawn_plan` + `await_plans_all`.
+
+Refactor direction:
+
+1. split current `core_workspace_sync@1` into prompt and tool subplans,
+2. keep composition explicit and typed,
+3. avoid app-local duplication of prompt sync logic.
 
 ## Prompt Source Model
 
@@ -70,7 +92,7 @@ Add direct prompt refs to config (next contract rev):
    - `prompt_refs: option<list<hash>>`
 
 These refs point to provider-agnostic message JSON blobs already stored in CAS.
-No workspace sync/apply event is needed for this path.
+No workspace sync/apply plan is needed for this path.
 
 ## Resolution and Precedence
 
@@ -123,12 +145,28 @@ No extra prompt metadata layer is required to run.
 3. Direct prompt refs affect runtime only when selected by a new run request.
 4. Reducers still do not execute external effects for prompt resolution.
 
+## Runtime Path by Source
+
+### Workspace source
+
+1. reducer emits/handles workspace prompt sync request,
+2. imported SDK prompt sync plan resolves pack ref/bytes deterministically,
+3. reducer validates and stages/applies active prompt snapshot.
+
+### Direct refs source
+
+1. reducer materializes run config with direct prompt refs,
+2. step materialization uses those refs directly,
+3. no workspace effect orchestration is involved.
+
 ## Implementation Focus
 
 1. Add direct prompt ref fields to SDK contracts/schemas.
-2. Update prompt materialization helper:
+2. Export prompt-only sync core plan in SDK AIR.
+3. Refactor current monolithic workspace sync plan into composable subplans.
+4. Update prompt materialization helper:
    - prefer direct prompt refs over workspace prompt pack ref.
-3. Add tests for:
+5. Add tests for:
    - workspace mode,
    - direct mode,
    - precedence when both are present.
@@ -145,9 +183,10 @@ Deterministic coverage:
 ## Definition of Done
 
 1. Prompt contract is documented as prompt-only, separate from tools.
-2. SDK supports prompt inputs via workspace and direct config refs.
-3. At least one smoke scenario runs with direct prompt refs and no workspace binding.
-4. Existing workspace smoke flow continues to pass replay parity.
+2. SDK exports a prompt-specific reusable sync plan.
+3. SDK supports prompt inputs via workspace and direct config refs.
+4. At least one smoke scenario runs with direct prompt refs and no workspace binding.
+5. Existing workspace smoke flow continues to pass replay parity.
 
 ## Open Questions
 
