--- a/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
@@ -48,6 +48,23 @@ Tools need a clear convention-first data shape plus hard authority boundaries.
    - descriptor is visible for the run,
    - reducer binding exists for the tool name,
    - triggered plans/effects pass caps/policy.
+6. SDK should export composable-core tool plans:
+   - descriptor sync plans,
+   - optional effect-bridge plans for stable built-in tool effects.
+
+## SDK Plan Exports (Tools)
+
+Target reusable plans in `crates/aos-agent-sdk/air/plans/`:
+
+1. `aos.agent/core_tool_catalog_sync_from_workspace@1`
+   - input: tool-catalog-specific workspace sync request contract,
+   - output: tool catalog snapshot-ready or unchanged result contract.
+2. Optional effect-bridge family (`core_tool_effect_*`) for stable built-in effects where shared orchestration is useful.
+
+Composition:
+
+1. prompt + tool workspace sync can be composed by a parent plan (for example `core_workspace_sync@2`) using `spawn_plan` + `await_plans_all`.
+2. app worlds import only the plans they need.
 
 ## Descriptor Sources
 
@@ -92,6 +109,12 @@ Binding is owned by reducer + plan contracts:
 
 Workspace files can influence model visibility, not runtime authority.
 
+Reducer binding contract should be explicit:
+
+1. `tool_name` -> intent schema (typed payload),
+2. intent schema -> triggered plan(s),
+3. plan(s) -> allowed effect set + cap slots + policy constraints.
+
 ## Precedence for Tool Visibility
 
 Per step:
@@ -128,8 +151,10 @@ This gives low friction while keeping deterministic lookup.
 ## Implementation Focus
 
 1. Add direct `tool_refs` config path for no-workspace agents.
-2. Introduce deterministic binding coverage checks in SDK/Demiurge reducers.
-3. Keep convention-first workspace catalog loading.
+2. Export tool-catalog sync core plan in SDK AIR.
+3. Introduce deterministic binding coverage checks in SDK/Demiurge reducers.
+4. Add optional SDK effect-bridge plans for stable built-in tool effects.
+5. Keep convention-first workspace catalog loading.
 
 ## Testing
 
@@ -140,13 +165,15 @@ Deterministic coverage:
 3. precedence across explicit step refs/direct refs/workspace refs,
 4. unbound tool call rejection without state corruption,
 5. policy/cap denial propagation through tool plans.
+6. imported SDK tool sync/effect-bridge plans execute without app-local wrapper duplication.
 
 ## Definition of Done
 
 1. Tool contract is documented separately from prompts.
-2. Descriptor source can be workspace or direct config refs.
-3. Binding/authority stays outside workspace and is enforced.
-4. At least one smoke fixture demonstrates direct tool refs with no workspace dependency.
+2. SDK exports a tool-catalog-specific reusable sync plan.
+3. Descriptor source can be workspace or direct config refs.
+4. Binding/authority stays outside workspace and is enforced.
+5. At least one smoke fixture demonstrates direct tool refs with no workspace dependency.
 
 ## Open Questions
 
