--- a/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
@@ -55,13 +55,18 @@ But it is still app-specific and embeds patterns the SDK should own.
 - Preserve deterministic behavior and request correlation guarantees.
 
 ### Slice 3.3: Plan/tool refactor
-- Replace custom tool orchestration patterns with SDK plan templates/helpers.
+- Replace custom tool orchestration patterns with imported SDK composable-core plans.
 - Ensure LLM request materialization is direct from immutable run config:
   - `RunRequested` chooses session defaults or run override,
   - `RunStarted` snapshots immutable `{provider, model, ...}`,
   - steps emit `llm.generate` from run config + deterministic step context.
+- Replace fixture-local wrapper-only routing where possible with trigger projection (`when` + `input_expr`) directly into imported core plans.
+- Adopt split workspace sync contracts/plans:
+  - `aos.agent/core_prompt_sync_from_workspace@1`,
+  - `aos.agent/core_tool_catalog_sync_from_workspace@1`,
+  - optional composed parent `aos.agent/core_workspace_sync@2`.
 - Keep current introspect/workspace tools functional.
-- Add at least one additional tool path that validates SDK extensibility.
+- Add at least one SDK effect-bridge tool execution path to validate extensibility.
 - Adopt new effect/tool families from P4 incrementally (starting with low-risk workspace-native operations).
 
 ### Slice 3.4: Operational hardening
@@ -104,6 +109,7 @@ These invariants must be preserved during refactor to avoid regressions:
 - Existing core features (chat + tools + debug trace) remain functional.
 - At least one new agent behavior can be added in Demiurge with SDK extension points and minimal bespoke code.
 - Obsolete Demiurge-only schema/event pathways are removed.
+- App-local duplicated core sync wrappers are removed where trigger projection + imported core plans can replace them.
 - Runtime behavior matches current working tool path semantics while moving naming/contracts to `aos.agent/*`.
 
 ## Open Questions
