--- a/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
@@ -3,7 +3,7 @@
 **Priority**: P3  
 **Effort**: Medium  
 **Risk if deferred**: High (prompt composition remains app-specific and workspace-only)  
-**Status**: Proposed (refined scope on 2026-02-22)
+**Status**: Implemented (2026-02-22)
 
 ## Goal
 
@@ -163,7 +163,8 @@ No extra prompt metadata layer is required to run.
 
 1. Add direct prompt ref fields to SDK contracts/schemas.
 2. Export prompt-only sync core plan in SDK AIR.
-3. Refactor current monolithic workspace sync plan into composable subplans.
+3. Export prompt-only workspace sync now; keep monolithic `core_workspace_sync@1`
+   as a compatible composed path until optional `core_workspace_sync@2` lands.
 4. Update prompt materialization helper:
    - prefer direct prompt refs over workspace prompt pack ref.
 5. Add tests for:
@@ -187,6 +188,27 @@ Deterministic coverage:
 3. SDK supports prompt inputs via workspace and direct config refs.
 4. At least one smoke scenario runs with direct prompt refs and no workspace binding.
 5. Existing workspace smoke flow continues to pass replay parity.
+
+## Implementation Notes (2026-02-22)
+
+Delivered in this branch:
+
+1. Added direct prompt refs to SDK contracts/schemas:
+   - `SessionConfig.default_prompt_refs`
+   - `RunConfig.prompt_refs`
+2. Implemented deterministic prompt precedence in materialization:
+   - run direct prompt refs > workspace prompt pack ref > none
+   - history refs appended oldest -> newest.
+3. Added prompt-only reusable plan export:
+   - `aos.agent/core_prompt_sync_from_workspace@1`.
+4. Kept workspace path optional:
+   - direct prompt refs run without any workspace binding/sync.
+5. Added reducer/helper tests and smoke validation for direct prompt refs and precedence.
+
+Out of scope for this slice:
+
+1. Full prompt+tool composed parent refactor (`core_workspace_sync@2`) remains optional and
+   tracked with p3.3/p3.4 planning.
 
 ## Open Questions
 
