--- a/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
@@ -3,7 +3,7 @@
 **Priority**: P3  
 **Effort**: Medium  
 **Risk if deferred**: High (tool visibility and tool authority remain conflated)  
-**Status**: Proposed (new split on 2026-02-22)
+**Status**: Implemented (2026-02-22)
 
 ## Goal
 
@@ -174,6 +174,27 @@ Deterministic coverage:
 3. Descriptor source can be workspace or direct config refs.
 4. Binding/authority stays outside workspace and is enforced.
 5. At least one smoke fixture demonstrates direct tool refs with no workspace dependency.
+
+## Implementation Notes (2026-02-22)
+
+Delivered in this branch:
+
+1. Added direct tool refs to SDK contracts/schemas:
+   - `SessionConfig.default_tool_refs`
+   - `RunConfig.tool_refs`
+2. Implemented deterministic tool visibility precedence in LLM materialization:
+   - `step.tool_refs` > `run_config.tool_refs` > workspace `tool_catalog_ref`.
+3. Exported a tool-specific reusable sync plan:
+   - `aos.agent/core_tool_catalog_sync_from_workspace@1`.
+4. Kept workspace tool catalogs convention-first:
+   - `tools/catalogs/<catalog>.json`.
+5. Added reducer/helper/smoke coverage for direct tool refs without workspace binding.
+
+Out of scope for this slice:
+
+1. Generic reducer-level tool binding coverage checks remain app-specific hooks (SDK currently
+   provides descriptor selection/materialization and workspace JSON shape validation).
+2. Optional composed parent `core_workspace_sync@2` remains a follow-up composition step.
 
 ## Open Questions
 
