--- a/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.2-agent-prompts.md
@@ -33,7 +33,7 @@ Keeping them in one contract made design choices harder to reason about.
 
 Current implementation note:
 
-1. `aos.agent/core_workspace_sync@1` currently resolves both prompt and tool workspace assets in one plan.
+1. `aos.agent/core_workspace_sync@1` composes prompt/tool subplans.
 
 ## Problem
 
@@ -63,12 +63,12 @@ Target reusable plans in `crates/aos-agent-sdk/air/plans/`:
 1. `aos.agent/core_prompt_sync_from_workspace@1`
    - input: prompt-specific workspace sync request contract,
    - output: prompt snapshot-ready or unchanged result contract.
-2. optional `aos.agent/core_workspace_sync@2`
-   - orchestration-only plan that composes prompt/tool sync subplans via `spawn_plan` + `await_plans_all`.
+2. `aos.agent/core_workspace_sync@1`
+   - orchestration-only plan that composes prompt/tool sync subplans via `spawn_plan` + `await_plan`.
 
 Refactor direction:
 
-1. split current `core_workspace_sync@1` into prompt and tool subplans,
+1. split workspace sync into prompt and tool subplans,
 2. keep composition explicit and typed,
 3. avoid app-local duplication of prompt sync logic.
 
@@ -163,8 +163,7 @@ No extra prompt metadata layer is required to run.
 
 1. Add direct prompt ref fields to SDK contracts/schemas.
 2. Export prompt-only sync core plan in SDK AIR.
-3. Export prompt-only workspace sync now; keep monolithic `core_workspace_sync@1`
-   as a compatible composed path until optional `core_workspace_sync@2` lands.
+3. Export composed `core_workspace_sync@1` as the single workspace sync parent.
 4. Update prompt materialization helper:
    - prefer direct prompt refs over workspace prompt pack ref.
 5. Add tests for:
@@ -204,11 +203,11 @@ Delivered in this branch:
 4. Kept workspace path optional:
    - direct prompt refs run without any workspace binding/sync.
 5. Added reducer/helper tests and smoke validation for direct prompt refs and precedence.
+6. Added composed parent plan export:
+   - `aos.agent/core_workspace_sync@1` (spawns prompt/tool subplans and merges).
+7. Switched SDK live fixture wrapper wiring to composed `core_workspace_sync@1`.
 
-Out of scope for this slice:
-
-1. Full prompt+tool composed parent refactor (`core_workspace_sync@2`) remains optional and
-   tracked with p3.3/p3.4 planning.
+The old monolithic workspace sync plan was removed in this branch.
 
 ## Open Questions
 
