--- a/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.3-agent-tools.md
@@ -63,7 +63,7 @@ Target reusable plans in `crates/aos-agent-sdk/air/plans/`:
 
 Composition:
 
-1. prompt + tool workspace sync can be composed by a parent plan (for example `core_workspace_sync@2`) using `spawn_plan` + `await_plans_all`.
+1. prompt + tool workspace sync can be composed by a parent plan (for example `core_workspace_sync@1`) using `spawn_plan` + `await_plan`.
 2. app worlds import only the plans they need.
 
 ## Descriptor Sources
@@ -186,15 +186,18 @@ Delivered in this branch:
    - `step.tool_refs` > `run_config.tool_refs` > workspace `tool_catalog_ref`.
 3. Exported a tool-specific reusable sync plan:
    - `aos.agent/core_tool_catalog_sync_from_workspace@1`.
-4. Kept workspace tool catalogs convention-first:
+4. Added composed workspace sync parent:
+   - `aos.agent/core_workspace_sync@1` using prompt/tool subplans.
+5. Switched live fixture wrapper wiring to `core_workspace_sync@1` and updated
+   policy origins to the prompt/tool subplans.
+6. Kept workspace tool catalogs convention-first:
    - `tools/catalogs/<catalog>.json`.
-5. Added reducer/helper/smoke coverage for direct tool refs without workspace binding.
+7. Added reducer/helper/smoke coverage for direct tool refs without workspace binding.
 
 Out of scope for this slice:
 
 1. Generic reducer-level tool binding coverage checks remain app-specific hooks (SDK currently
    provides descriptor selection/materialization and workspace JSON shape validation).
-2. Optional composed parent `core_workspace_sync@2` remains a follow-up composition step.
 
 ## Open Questions
 
