--- a/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
@@ -3,7 +3,7 @@
 **Priority**: P3  
 **Effort**: Medium  
 **Risk if deferred**: Medium (Demiurge remains a special-case toy path)  
-**Status**: Proposed
+**Status**: In Progress (2026-02-22)
 
 ## Goal
 
@@ -64,7 +64,7 @@ But it is still app-specific and embeds patterns the SDK should own.
 - Adopt split workspace sync contracts/plans:
   - `aos.agent/core_prompt_sync_from_workspace@1`,
   - `aos.agent/core_tool_catalog_sync_from_workspace@1`,
-  - optional composed parent `aos.agent/core_workspace_sync@2`.
+  - composed parent `aos.agent/core_workspace_sync@1`.
 - Keep current introspect/workspace tools functional.
 - Add at least one SDK effect-bridge tool execution path to validate extensibility.
 - Adopt new effect/tool families from P4 incrementally (starting with low-risk workspace-native operations).
@@ -102,6 +102,22 @@ These invariants must be preserved during refactor to avoid regressions:
 - Add replay parity tests for migrated flows.
 - Add SDK conformance tests that run against Demiurge as a fixture app.
 - Keep `crates/aos-smoke` as the single e2e runner for SDK-level scenarios; avoid adding a Demiurge-specific parallel runner.
+
+## Progress Notes (2026-02-22)
+
+Completed groundwork in SDK + smoke fixture:
+
+1. Prompt/tool split subplans exported:
+   - `core_prompt_sync_from_workspace@1`
+   - `core_tool_catalog_sync_from_workspace@1`
+2. Composed parent exported:
+   - `core_workspace_sync@1`
+3. Live SDK smoke fixture (`22-agent-live`) wrapper/manifests/policies now target
+   composed `core_workspace_sync@1` path.
+
+Remaining in this roadmap item:
+
+1. Demiurge app migration itself still pending across slices 3.1-3.5.
 
 ## Definition of Done
 
