--- a/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
+++ b/roadmap/v0.10.1-agent-sdk/p3.4-demiurge-refactor.md
@@ -1,135 +1,130 @@
-# P3: Refactor Demiurge onto Agent SDK
+# P3.4: Demiurge Cutover to Agent SDK
 
 **Priority**: P3  
-**Effort**: Medium  
-**Risk if deferred**: Medium (Demiurge remains a special-case toy path)  
-**Status**: In Progress (2026-02-22)
+**Effort**: Medium-High  
+**Risk if deferred**: High (Demiurge stays on a separate agent stack)  
+**Status**: Rescoped (2026-02-22)
 
 ## Goal
 
-My goals:
-- single shot refactor: move to sdk in one go
-- considered used of tools: expand available effects first, add tool call to effect mapping support in sdk, requires thinking about what tools to support.
-- first version of a solution how to use external schema definitions (from sdk), beyond sys/* (do not repeat schemas)
+Replace `apps/demiurge` with SDK-native agent contracts in one pass.
 
----
+No compatibility mode, no migration bridge, no dual-stack runtime.
 
-Refactor `apps/demiurge` to consume `aos-agent-sdk` primitives so Demiurge becomes:
-- a real reference implementation for AOS-native agents,
-- a proving ground for coding-agent and world-operator flows,
-- less bespoke reducer/plan code over time.
+## Current Baseline (2026-02-22)
 
-This document is intentionally lighter than P1/P2 because SDK contracts will evolve during implementation.
+### Already complete in SDK/fixtures
 
-## Current State (Why Refactor)
+1. Prompt/tool split contracts are implemented (`p3.2`, `p3.3`).
+2. Composed workspace sync is implemented:
+   - `aos.agent/core_prompt_sync_from_workspace@1`
+   - `aos.agent/core_tool_catalog_sync_from_workspace@1`
+   - `aos.agent/core_workspace_sync@1`
+3. Live SDK fixture (`22-agent-live`) already runs on:
+   - `aos.agent/SessionEvent@1`
+   - `aos.agent/SessionState@1`
+   - `aos-agent-sdk` reducer helpers.
 
-Demiurge today is a useful prototype:
-- chat request/response loop,
-- tool call parsing/dispatch,
-- workspace/introspect tools,
-- debug trace support.
+### Still bespoke in Demiurge
 
-But it is still app-specific and embeds patterns the SDK should own.
+1. Reducer state/event model is custom chat/tool state.
+2. Manifest routes custom `demiurge/Chat*` events and custom plans.
+3. Tool registry sync is custom (`workspace.resolve` + `workspace.list`) instead of SDK workspace sync plans.
+4. Tool execution plan and tool binding model are app-local and not aligned to SDK session/tool-batch contracts.
 
-## Refactor Direction
+## Target End State
 
-1. Move Demiurge to SDK primitives in one refactor pass.
-2. Treat Demiurge as the first major integration test for the new SDK.
-3. Adopt `aos.agent/*` as the core namespace for runtime-facing contracts.
+Demiurge becomes an SDK consumer, not a parallel agent framework.
 
-## Non-Goals (P3)
+### 1) Reducer contract
 
-- Not a full product redesign of shell UX.
-- Not the final coding-agent implementation.
-- Not final multi-world universe orchestration.
+1. Reducer ABI uses `aos.agent/SessionEvent@1` and `aos.agent/SessionState@1`.
+2. Reducer applies SDK transitions via `apply_session_event_with_catalog_and_limits`.
+3. App-specific logic stays in explicit hooks/helpers layered around SDK state, not a replacement state machine.
 
-## Implementation Slices
+### 2) Prompt/tool source model
 
-### Slice 3.1: Event/schema alignment
-- Map Demiurge chat/tool events to `aos.agent/*` run/turn/action concepts.
-- Remove obsolete schema/event paths in the same change set.
+1. Prompt sources follow SDK precedence:
+   - run `prompt_refs` > workspace `prompt_pack_ref`.
+2. Tool visibility follows SDK precedence:
+   - step `tool_refs` > run `tool_refs` > workspace `tool_catalog_ref`.
+3. Workspace is optional:
+   - direct refs path works with no workspace sync/apply.
 
-### Slice 3.2: Reducer refactor
-- Replace bespoke loop fields/state transitions with SDK reducer helpers.
-- Standardize pending/waiting/error states to SDK conventions.
-- Preserve deterministic behavior and request correlation guarantees.
+### 3) Tool authority model
 
-### Slice 3.3: Plan/tool refactor
-- Replace custom tool orchestration patterns with imported SDK composable-core plans.
-- Ensure LLM request materialization is direct from immutable run config:
-  - `RunRequested` chooses session defaults or run override,
-  - `RunStarted` snapshots immutable `{provider, model, ...}`,
-  - steps emit `llm.generate` from run config + deterministic step context.
-- Replace fixture-local wrapper-only routing where possible with trigger projection (`when` + `input_expr`) directly into imported core plans.
-- Adopt split workspace sync contracts/plans:
-  - `aos.agent/core_prompt_sync_from_workspace@1`,
-  - `aos.agent/core_tool_catalog_sync_from_workspace@1`,
-  - composed parent `aos.agent/core_workspace_sync@1`.
-- Keep current introspect/workspace tools functional.
-- Add at least one SDK effect-bridge tool execution path to validate extensibility.
-- Adopt new effect/tool families from P4 incrementally (starting with low-risk workspace-native operations).
+1. Descriptor visibility may come from workspace or direct refs.
+2. Execution authority is reducer/plan-owned only.
+3. Tool binding is explicit:
+   - `tool_name` -> typed intent payload -> plan trigger -> allowed effects/caps.
+4. Unbound or invisible tool calls are rejected deterministically.
 
-### Slice 3.4: Operational hardening
-- Align debug surfaces with SDK terminology (run/turn/action lineage).
-- Expand e2e tests to cover:
-  - tool errors,
-  - cap/policy denials,
-  - multi-step tool continuation,
-  - parent/child session orchestration events.
+### 4) Plan topology
 
-### Slice 3.5: Advanced toolset enablement
-- Add coding-agent-grade tools as Demiurge capabilities once P4 contracts land:
-  - patch-style workspace edits,
-  - shell execution,
-  - compiler/build flows.
-- Keep each capability behind explicit caps/policy and validate traceability end-to-end.
+1. Workspace sync uses imported SDK core plans via one thin Demiurge wrapper for `SessionEvent` envelope adaptation.
+2. Demiurge-specific plans remain only where app-specific effect behavior is required.
+3. No separate Demiurge tool-catalog sync plan remains.
 
-## Wiring Invariants from Current Demiurge
+## Work Packages (No Migration Path)
 
-These invariants must be preserved during refactor to avoid regressions:
+### WP1: AIR contract reset in Demiurge
 
-1. Tool execution stays plan-only under caps/policy.
-2. Reducer remains the tool-call interpreter and state owner.
-3. CAS refs remain the interface between LLM output, tool results, and state.
-4. Tool registry refresh remains explicit and version-aware.
-5. Reducer micro-effects remain limited to blob bridging behavior, not tool orchestration.
-6. Provider/model selection is explicit in session/run config and frozen per run.
-7. Demiurge consumes core-owned `sys/*` LLM contracts and must not introduce app- or SDK-local `sys/*` schema forks.
+1. Rewrite `apps/demiurge/air/module.air.json` to SDK session reducer ABI.
+2. Rewrite `apps/demiurge/air/manifest.air.json` routing/triggers around `aos.agent/SessionEvent@1`.
+3. Remove obsolete custom chat/tool schemas from `apps/demiurge/air/schemas.air.json`.
+4. Keep only Demiurge-local schemas that are still needed for app-specific intents/results.
 
-## Testing
+### WP2: Reducer replacement
 
-- Preserve existing Demiurge e2e coverage as baseline.
-- Add replay parity tests for migrated flows.
-- Add SDK conformance tests that run against Demiurge as a fixture app.
-- Keep `crates/aos-smoke` as the single e2e runner for SDK-level scenarios; avoid adding a Demiurge-specific parallel runner.
+1. Replace `apps/demiurge/reducer/src/lib.rs` bespoke chat reducer with SDK session reducer wrapper + hooks.
+2. Add deterministic provider/model allowlists (same pattern as SDK live fixture).
+3. Keep tool-call interpretation in explicit Demiurge hook code, but drive lifecycle/epochs/tool-batch invariants through SDK state.
 
-## Progress Notes (2026-02-22)
+### WP3: Workspace sync and config wiring
 
-Completed groundwork in SDK + smoke fixture:
+1. Use imported `aos.agent/core_workspace_sync@1` behind a thin session wrapper plan.
+2. Remove `apps/demiurge/air/tool_registry_plan.air.json`.
+3. Ensure reducer handles `WorkspaceSync*`/`WorkspaceApplyRequested` events through SDK helper path.
+4. Ensure direct refs mode (no workspace) is a first-class execution path.
 
-1. Prompt/tool split subplans exported:
-   - `core_prompt_sync_from_workspace@1`
-   - `core_tool_catalog_sync_from_workspace@1`
-2. Composed parent exported:
-   - `core_workspace_sync@1`
-3. Live SDK smoke fixture (`22-agent-live`) wrapper/manifests/policies now target
-   composed `core_workspace_sync@1` path.
+### WP4: Tool execution refactor
 
-Remaining in this roadmap item:
+1. Replace ad hoc `ToolCallRequested` pipeline with SDK-aligned tool batch lifecycle:
+   - batch start,
+   - per-call settle,
+   - batch settled.
+2. Keep effect execution plan-only; reducers emit/consume events only.
+3. For each supported tool, define one typed intent contract and one bound plan/effect route.
 
-1. Demiurge app migration itself still pending across slices 3.1-3.5.
+### WP5: Demiurge workspace content conventions
+
+1. Move workspace prompt content to `prompts/packs/<pack>.json`.
+2. Move workspace tool descriptors to `tools/catalogs/<catalog>.json`.
+3. Remove dependence on ad hoc workspace listing/scanning semantics.
+
+### WP6: Smoke and replay hardening
+
+1. Replace current Demiurge smoke to drive SDK session events.
+2. Cover both modes:
+   - workspace sync/apply mode,
+   - direct prompt/tool refs mode.
+3. Add deterministic failures for:
+   - unbound tool name,
+   - invisible tool name,
+   - policy/cap denial path.
+4. Keep replay parity as mandatory gate.
 
 ## Definition of Done
 
-- Demiurge core loop runs on SDK primitives rather than bespoke chat-only structures.
-- Existing core features (chat + tools + debug trace) remain functional.
-- At least one new agent behavior can be added in Demiurge with SDK extension points and minimal bespoke code.
-- Obsolete Demiurge-only schema/event pathways are removed.
-- App-local duplicated core sync wrappers are removed where trigger projection + imported core plans can replace them.
-- Runtime behavior matches current working tool path semantics while moving naming/contracts to `aos.agent/*`.
+1. Demiurge reducer/event/state contracts are SDK-native (`aos.agent/*`).
+2. Old custom chat/tool registry control-plane paths are removed.
+3. Workspace sync uses imported SDK core plans, not Demiurge-local equivalents.
+4. Tool execution authority is explicit and outside workspace descriptors.
+5. Demiurge runs end-to-end in both workspace and direct-refs modes.
+6. Replay parity passes for migrated flows.
 
-## Open Questions
+## Out of Scope for This Item
 
-- How aggressively should we rename public Demiurge schemas during v0.10?
-- Do we keep one monolithic Demiurge reducer initially, or split by SDK domain boundaries?
-- Which coding-agent features should land in Demiurge vs a separate app once SDK is ready?
+1. New coding-agent tool families beyond current Demiurge capability set.
+2. UX redesign of Demiurge shell/client surfaces.
+3. Cross-world orchestration features beyond single-session runtime cutover.
