--- a/spec/07-gc.md
+++ b/spec/07-gc.md
@@ -92,9 +92,9 @@ Writers SHOULD persist `edge_ref` (not just `blob_ref`) when later reachability 
 Snapshots MUST carry all roots required for deterministic restore and GC traversal. At minimum:
 
 - `manifest_hash`
-- reducer state roots
-- keyed reducer `cell_index_root` roots
-- workspace roots (directly or via reducer-owned state roots)
+- workflow module state roots (reducer ABI state bytes)
+- keyed workflow `cell_index_root` roots
+- workspace roots (directly or via workflow-owned state roots)
 - additional `pinned_roots[]`
 
 Root completeness is non-negotiable. If a required root is omitted, restore/GC correctness is undefined.
@@ -163,7 +163,7 @@ Deletion mechanics are implementation-defined and are out of scope for P1.
 
 ### System Responsibility
 
-Kernel/protocol surfaces MUST ensure system-defined typed payloads expose refs in traversable form. This includes snapshot completeness, manifest linkage, reducer state roots, cell index roots, and workspace roots.
+Kernel/protocol surfaces MUST ensure system-defined typed payloads expose refs in traversable form. This includes snapshot completeness, manifest linkage, workflow state roots, cell index roots, and workspace roots.
 
 ### Application Responsibility
 
@@ -181,13 +181,13 @@ Two implementations are valid for typed-node traversal:
 
 The adjacency index is a derived cache, not a new source of truth. If missing or corrupt, implementations MUST be able to rebuild it from canonical CAS content.
 
-## Reducers, Cells, and Workspaces
+## Workflows, Cells, and Workspaces
 
-- Reducer state is traversable when schema-known and rooted from snapshots.
-- Keyed reducers are rooted via `cell_index_root`; index nodes lead to per-cell state blobs/nodes.
+- Workflow state is traversable when schema-known and rooted from snapshots.
+- Keyed workflows are rooted via `cell_index_root`; index nodes lead to per-cell state blobs/nodes.
 - Workspace content is retained via workspace roots reachable from snapshot roots.
 
-If reducer/workspace payloads hide hashes inside opaque bytes without explicit refs, those hidden references are out of contract and may be collected.
+If workflow/workspace payloads hide hashes inside opaque bytes without explicit refs, those hidden references are out of contract and may be collected.
 
 ## P1 Deliverables and Non-Goals
 
